add Fastlane and TestFlight workflow

--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -1,51 +1,42 @@
 name: iOS TestFlight
-
 on:
   workflow_dispatch:
   push:
     branches: [ main ]
-
 jobs:
   build-upload:
     runs-on: macos-14
-
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-
+          node-version: "20"
       - name: Install npm deps
         run: |
           corepack enable || true
           npm ci || npm i
           npm i -D @capacitor/cli@^6
           npm i @capacitor/core@^6 @capacitor/ios@^6
-
       - name: Ensure www/index.html
         run: |
           mkdir -p www
           [ -f www/index.html ] || echo "<!doctype html><title>Nabo</title>" > www/index.html
-
       - name: Fresh iOS platform
         run: |
           rm -rf ios
           npx --yes @capacitor/cli@latest add ios
           npx --yes @capacitor/cli@latest sync ios
-
       - name: Ruby + Bundler
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: "3.2"
           bundler-cache: true
-
       - name: CocoaPods
         run: |
           sudo gem install cocoapods --no-document
           cd ios/App
           pod repo update
           pod install
-
       - name: Fastlane build + upload to TestFlight
         env:
           APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
@@ -54,7 +45,6 @@ jobs:
           APP_STORE_CONNECT_API_KEY_IS_KEY_CONTENT_BASE64: true
         run: |
           bundle exec fastlane ios ci
-
       - name: Upload build artifact
         if: always()
         uses: actions/upload-artifact@v4
