--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -2,7 +2,8 @@ name: iOS TestFlight
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
 jobs:
   build-upload:
     runs-on: macos-14
