--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -1,41 +1,46 @@
 name: iOS TestFlight
+
 on:
   workflow_dispatch:
   push:
     branches:
       - main
+
 jobs:
   build-upload:
     runs-on: macos-14
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
+
       - name: Install npm deps
         run: |
           corepack enable || true
           npm ci || npm i
           npm i -D @capacitor/cli@^6
           npm i @capacitor/core@^6 @capacitor/ios@^6
+
       - name: Ensure www/index.html
         run: |
           mkdir -p www
           [ -f www/index.html ] || echo "<!doctype html><title>Nabo</title>" > www/index.html
-      - name: Fresh iOS platform
-        run: |
-          rm -rf ios
-          npx --yes @capacitor/cli@latest add ios
-          npx --yes @capacitor/cli@latest sync ios
-      - name: Ruby + Bundler
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.2"
-          bundler-cache: true
-       - name: Ensure iOS platform exists
+
+      - name: Ensure iOS platform exists
         run: |
           npx --yes @capacitor/cli@latest add ios || true
           npx --yes @capacitor/cli@latest sync ios
+
+      - name: Ruby + Bundler
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2'
+          bundler-cache: true
 
       - name: Install CocoaPods and pods
         run: |
@@ -52,6 +57,7 @@ jobs:
           APP_STORE_CONNECT_API_KEY_IS_KEY_CONTENT_BASE64: true
         run: |
           bundle exec fastlane ios ci
+
       - name: Upload build artifact
         if: always()
         uses: actions/upload-artifact@v4
