--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -49,14 +49,22 @@ jobs:
           pod repo update
           pod install
 
-      - name: Fastlane build + upload to TestFlight
+  
+     - name: Fastlane build + upload to TestFlight
         env:
           APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
           APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
           APP_STORE_CONNECT_API_KEY_KEY: ${{ secrets.ASC_KEY_P8_BASE64 }}
           APP_STORE_CONNECT_API_KEY_IS_KEY_CONTENT_BASE64: true
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
-          bundle exec fastlane ios ci
+          bundle exec fastlane --verbose ios ci
+
+      - name: Verify IPA exists
+        run: |
+          ls -la build || true
+          test -f build/*.ipa
+
 
       - name: Upload build artifact
         if: always()
