--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -42,6 +42,12 @@ jobs:
           ruby-version: '3.2'
           bundler-cache: true
 
+     - name: Ensure iOS platform exists
+  run: |
+    npx --yes @capacitor/cli@latest add ios || true
+    npx --yes @capacitor/cli@latest sync ios
+
+
       - name: Install CocoaPods and pods
         run: |
           sudo gem install cocoapods --no-document
