--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -55,25 +55,33 @@ jobs:
           pod repo update
           pod install
 
-      - name: Fastlane build + upload (verbose)
-        env:
-          APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
-          APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY_KEY: ${{ secrets.ASC_KEY_P8_BASE64 }}
-          APP_STORE_CONNECT_API_KEY_IS_KEY_CONTENT_BASE64: true
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-        run: |
-          bundle exec fastlane --verbose ios ci
+      - name: Sanity: list schemes
+  run: |
+    xcodebuild -list -json -workspace ios/App/App.xcworkspace | tee schemes.json
+    cat schemes.json
 
-      - name: Verify IPA exists
-        run: |
-          ls -la build || true
-          test -f build/*.ipa
+- name: Fastlane build + upload (verbose)
+  env:
+    APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
+    APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
+    APP_STORE_CONNECT_API_KEY_KEY: ${{ secrets.ASC_KEY_P8_BASE64 }}
+    APP_STORE_CONNECT_API_KEY_IS_KEY_CONTENT_BASE64: true
+    APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+    APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+  run: |
+    bundle exec fastlane --verbose ios ci
 
-      - name: Upload build artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: ipa
-          path: build/*.ipa
+- name: Verify IPA exists
+  run: |
+    ls -la build || true
+    test -f build/*.ipa
+
+- name: Upload Xcode/Gym logs (always)
+  if: always()
+  uses: actions/upload-artifact@v4
+  with:
+    name: gym-logs
+    path: |
+      /Users/runner/Library/Logs/gym/**
+      ~/Library/Logs/gym/**
+      build/**
