--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -1,4 +1,5 @@
-﻿name: iOS TestFlight
+name: iOS TestFlight
+
 on:
   workflow_dispatch:
   push:
@@ -7,32 +8,49 @@ on:
 jobs:
   build-upload:
     runs-on: macos-14
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: "20" }
+        with:
+          node-version: '20'
+
       - name: NPM deps
         run: |
+          set -e
           corepack enable || true
           npm ci || npm i
           npm i -D @capacitor/cli@^6
           npm i @capacitor/core@^6 @capacitor/ios@^6
-      - name: Ensure config + web
+
+      - name: Ensure capacitor.config.json + web
         run: |
-          echo '{ "appId":"com.nabo.marketplace","appName":"Nabo","webDir":"www" }' > capacitor.config.json
+          [ -f capacitor.config.json ] || printf '{\n  "appId":"com.nabo.marketplace",\n  "appName":"Nabo",\n  "webDir":"www"\n}\n' > capacitor.config.json
           mkdir -p www
           [ -f www/index.html ] || echo '<!doctype html><title>Nabo</title>' > www/index.html
+          cat capacitor.config.json
+
       - name: Generate iOS and sync
         run: |
           npx --yes @capacitor/cli@latest add ios || true
           npx --yes @capacitor/cli@latest sync ios
+
       - name: Ruby + Bundler
         uses: ruby/setup-ruby@v1
-        with: { ruby-version: "3.2", bundler-cache: true }
+        with:
+          ruby-version: '3.2'
+          bundler-cache: true
+
       - name: CocoaPods
         run: |
           sudo gem install cocoapods --no-document
-          cd ios/App && pod install
+          cd ios/App
+          pod install
+
+      - name: List schemes
+        run: xcodebuild -list -workspace ios/App/App.xcworkspace
+
       - name: Fastlane build + upload
         env:
           APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
@@ -42,6 +60,12 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
         run: bundle exec fastlane ios ci
+
+      - name: Verify IPA
+        run: |
+          ls -la build || true
+          test -f build/*.ipa
+
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
@@ -50,3 +74,4 @@ jobs:
           path: |
             build/*.ipa
             ~/Library/Logs/gym/**
+            /Users/runner/Library/Logs/gym/**
