--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -3,16 +3,19 @@ name: iOS TestFlight
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-upload:
     runs-on: macos-14
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
@@ -29,7 +32,6 @@ jobs:
           [ -f capacitor.config.json ] || printf '{\n  "appId":"com.nabo.marketplace",\n  "appName":"Nabo",\n  "webDir":"www"\n}\n' > capacitor.config.json
           mkdir -p www
           [ -f www/index.html ] || echo '<!doctype html><title>Nabo</title>' > www/index.html
-          cat capacitor.config.json
 
       - name: Generate iOS and sync
         run: |
@@ -53,10 +55,10 @@ jobs:
 
       - name: Show Fastfile
         run: |
-    echo "==== FASTFILE BEGIN ===="
-    sed -n '1,120p' fastlane/Fastfile
-    echo "==== FASTFILE END ===="
-    
+          echo "==== FASTFILE BEGIN ===="
+          sed -n '1,120p' fastlane/Fastfile
+          echo "==== FASTFILE END ===="
+
       - name: Fastlane build + upload
         env:
           APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.ASC_KEY_ID }}
@@ -67,17 +69,17 @@ jobs:
           APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
         run: bundle exec fastlane ios ci
 
-        - name: Dump gym log (on failure)
-  if: failure()
-  run: |
-    LOG=$(ls -t ~/Library/Logs/gym/*.log 2>/dev/null | head -n1 || true)
-    echo "USING LOG: $LOG"
-    [ -f "$LOG" ] && tail -n 200 "$LOG" || echo "No gym log found."
-
       - name: Verify IPA
         run: |
           ls -la build || true
           test -f build/*.ipa
+
+      - name: Dump gym log (on failure)
+        if: failure()
+        run: |
+          LOG=$(ls -t ~/Library/Logs/gym/*.log 2>/dev/null | head -n1 || true)
+          echo "USING LOG: $LOG"
+          [ -f "$LOG" ] && tail -n 200 "$LOG" || echo "No gym log found."
 
       - name: Upload artifacts
         if: always()
